--- a/evalucion_mod1_BGR.ipynb
+++ b/evalucion_mod1_BGR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "7225e49d",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,21 @@
     "                        \"Precio €\": precio,\n",
     "                         \"Cantidad\": cantidad,\n",
     "                        }\n",
-    "        return inventario"
+    "        return inventario\n",
+    "    \n",
+    "    def buscar_producto(self, producto): #pongo producto como atributo para que reconozca la variable\n",
+    "        for nombre in self.inventario: #se pide un bucle for\n",
+    "            if nombre == producto: #definimos producto y lo == para que coincida con lo que ya tenemos en la lista\n",
+    "                precio, cantidad = self.inventario[nombre] \n",
+    "                print(f\"Detalles del producto. Nombre: {nombre}, Precio: {precio} €, cantidad {cantidad} en unidades.\")\n",
+    "                return producto\n",
+    "        else:\n",
+    "            print(\"El producto que busca no está disponible.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "839442b9",
    "metadata": {},
    "outputs": [
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9545b3ea",
    "metadata": {},
    "outputs": [
@@ -74,13 +83,35 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tienda1.ver_inventario() #el nombre queda redundante, pero si lo quito de la def me falla, así que lo dejo, en el ejercicio de repasso se hacía con id_number pero aquí lo he hecho con el nombre directamente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3f15109d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detalles del producto. Nombre: fresas, Precio: 3 €, cantidad 50 en unidades.\n",
+      "Detalles del producto. Nombre: patatas, Precio: 4 €, cantidad 60 en unidades.\n",
+      "El producto que busca no está disponible.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.buscar_producto('fresas')\n",
+    "tienda1.buscar_producto('patatas')\n",
+    "tienda1.buscar_producto('manzanas')"
    ]
   }
  ],
