--- a/evalucion_mod1_BGR.ipynb
+++ b/evalucion_mod1_BGR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "7225e49d",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "\n",
     "    def ver_inventario(self):\n",
     "        inventario = {}\n",
-    "        for nombre in self.inventario: #bucle para iterar por el inventario\n",
+    "        for nombre in self.inventario: #bucle para iterar por el inventario, sin for se podrían hacer condicionales directamente\n",
     "            precio, cantidad = self.inventario[nombre] #extraer valores de una lista, aislar variables\n",
     "            inventario[nombre] = {\n",
     "                        \"Nombre\": nombre,\n",
@@ -41,12 +41,31 @@
     "                print(f\"Detalles del producto. Nombre: {nombre}, Precio: {precio} €, cantidad {cantidad} en unidades.\")\n",
     "                return producto\n",
     "        else:\n",
-    "            print(\"El producto que busca no está disponible.\")"
+    "            print(\"El producto que busca no está disponible.\") #else fuera para que no repita la iteración por todos los productos si no lo encuentra\n",
+    "\n",
+    "    def actualizar_stock(self, nombre, cantidad_actual):\n",
+    "        for producto in self.inventario:\n",
+    "            if nombre == producto:\n",
+    "                precio, cantidad = self.inventario[nombre]\n",
+    "                nueva_cantidad = cantidad + cantidad_actual #actualizar con ventas\n",
+    "                if nueva_cantidad <0: #ha habido ventas y se ha reducido el stock\n",
+    "                    print(f\"No se puede vender el producto {nombre} por falta de stock.\")\n",
+    "                    \n",
+    "                if cantidad_actual < 0:\n",
+    "                    print(f\"Se han vendido {cantidad_actual} del producto {nombre}.\")  \n",
+    "                elif cantidad_actual > 0 : #ha llegado stock a la tienda\n",
+    "                    print(f\"Se han agregado {cantidad_actual} del producto {nombre}.\")\n",
+    "                else: #no ha habido ventas ni ha llegado stock\n",
+    "                    print(f\"El producto {nombre} no ha se ha modificado.\")\n",
+    "            \n",
+    "            else: #no ha habido ventas ni ha llegado stock\n",
+    "                print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "839442b9",
    "metadata": {},
    "outputs": [
@@ -71,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "9545b3ea",
    "metadata": {},
    "outputs": [
@@ -83,7 +102,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "3f15109d",
    "metadata": {},
    "outputs": [
@@ -112,6 +131,34 @@
     "tienda1.buscar_producto('fresas')\n",
     "tienda1.buscar_producto('patatas')\n",
     "tienda1.buscar_producto('manzanas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20240120",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se han agregado 6 del producto fresas.\n",
+      "Este producto fresas no se encuentra en el inventario actualmente.\n",
+      "Este producto fresas no se encuentra en el inventario actualmente.\n",
+      "Este producto patatas no se encuentra en el inventario actualmente.\n",
+      "Este producto patatas no se encuentra en el inventario actualmente.\n",
+      "Se han agregado 6 del producto patatas.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.actualizar_stock('fresas', 6)\n",
+    "tienda1.actualizar_stock('patatas', 6)\n",
+    "tienda1.actualizar_stock('manzanas', 6) #no sé por qué no se para el bucle"
    ]
   }
  ],
