--- a/prueba_evalucion.ipynb
+++ b/prueba_evalucion.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "id": "b8246d6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'break' outside loop (613607067.py, line 54)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[216], line 54\u001b[1;36m\u001b[0m\n\u001b[1;33m    break\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'break' outside loop\n"
+     ]
+    }
+   ],
    "source": [
     "class TiendaOnline:\n",
     "    def __init__(self, nombre):\n",
@@ -42,7 +51,227 @@
     "                return producto\n",
     "        else:\n",
     "            print(\"El producto que busca no está disponible.\")\n",
+    "\n",
+    "    def actualizar_stock(self, nombre, cantidad_actual):\n",
+    "        for producto in self.inventario:\n",
+    "            if nombre == producto:\n",
+    "                precio, cantidad = self.inventario[nombre]\n",
+    "                nueva_cantidad = cantidad + cantidad_actual #actualizar con ventas\n",
+    "                if nueva_cantidad <0: #ha habido ventas y se ha reducido el stock\n",
+    "                    print(f\"No se puede vender el producto {nombre} por falta de stock.\")\n",
+    "                    \n",
+    "                if cantidad_actual < 0:\n",
+    "                    print(f\"Se han vendido {cantidad_actual} del producto {nombre}.\")  \n",
+    "                elif cantidad_actual > 0 : #ha llegado stock a la tienda\n",
+    "                    print(f\"Se han agregado {cantidad_actual} del producto {nombre}.\")\n",
+    "                else: #no ha habido ventas ni ha llegado stock\n",
+    "                    print(f\"El producto {nombre} no ha se ha modificado.\")\n",
+    "            \n",
+    "        else:  #no ha habido ventas ni ha llegado stock\n",
+    "            print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "            break\n",
+    "\n",
+    "            \n",
+    "\n",
     "             \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "19d5f73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'TiendaOnline' object has no attribute 'actualizar_stock'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[196], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tienda1\u001b[38;5;241m.\u001b[39mactualizar_stock(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfresas\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m6\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TiendaOnline' object has no attribute 'actualizar_stock'"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.actualizar_stock('fresas', 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "70265c3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1997494677.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[197], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "def actualizar_stock(self, nombre= None, cantidad = None):\n",
+    "    for producto in self.inventario:\n",
+    "        if producto == nombre:\n",
+    "            \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e85a844f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 4 (1937694687.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[178], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    elif cantidad > 0: #ha llegado stock a la tienda\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def actualizar_stock(self, nombre, cantidad):\n",
+    "    for producto in self.inventario:\n",
+    "        if nombre == producto:\n",
+    "            if cantidad <0: #ha habido ventas y se ha reducido el stock\n",
+    "            elif cantidad > 0: #ha llegado stock a la tienda\n",
+    "            else:  #no ha habido ventas ni ha llegado stock\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b84f890",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def actualizar_stock(self, nombre, cantidad):\n",
+    "    for producto in self.inventario:\n",
+    "        ventas = 0\n",
+    "        compras = 0\n",
+    "        if nombre == producto:\n",
+    "            if cantidad < nueva_cantidad: #ha habido ventas y se ha reducido el stock\n",
+    "               precio, cantidad = self.inventario[nombre]\n",
+    "               nueva_cantidad = cantidad - ventas #actualizar con ventas\n",
+    "               \n",
+    "            elif cantidad > nueva_cantidad : #ha llegado stock a la tienda\n",
+    "                precio, cantidad = self.inventario[nombre]\n",
+    "                nueva_cantidad = cantidad + compras #agregar a stock\n",
+    "\n",
+    "            else:  #no ha habido ventas ni ha llegado stock\n",
+    "                print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "\n",
+    "#algo también da error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "a1868681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def actualizar_stock(self, nombre, cantidad_actual):\n",
+    "    for producto in self.inventario:\n",
+    "        if nombre == producto:\n",
+    "            precio, cantidad = self.inventario[nombre]\n",
+    "            nueva_cantidad = cantidad + cantidad_actual #actualizar con ventas\n",
+    "            if nueva_cantidad <0: #ha habido ventas y se ha reducido el stock\n",
+    "                print(f\"No se puede vender el producto {nombre} por falta de stock.\")\n",
+    "                self.inventario[nombre] = [precio, nueva_cantidad]\n",
+    "                \n",
+    "            if cantidad_actual < 0:\n",
+    "                print(f\"Se han vendido {cantidad_actual} del producto {nombre}.\")  \n",
+    "            elif cantidad_actual > 0 : #ha llegado stock a la tienda\n",
+    "                print(f\"Se han agregado {cantidad_actual} del producto {nombre}.\")\n",
+    "            else: #no ha habido ventas ni ha llegado stock\n",
+    "                 print(f\"El producto {nombre} no ha se ha modificado.\")\n",
+    "        \n",
+    "        else:  #no ha habido ventas ni ha llegado stock\n",
+    "            print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19dcaf8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'inventario'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[183], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m ventas \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m----> 2\u001b[0m actualizar_stock(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfresas\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m6\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[180], line 2\u001b[0m, in \u001b[0;36mactualizar_stock\u001b[1;34m(self, nombre, cantidad_actual)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mactualizar_stock\u001b[39m(\u001b[38;5;28mself\u001b[39m, nombre, cantidad_actual):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario:\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m nombre \u001b[38;5;241m==\u001b[39m producto:\n\u001b[0;32m      4\u001b[0m             precio, cantidad \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario[nombre]\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'inventario'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "actualizar_stock('fresas', 3, +6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca80bdd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def actualizar_stock(self, nombre, cantidad):\n",
+    "    for producto in self.inventario:\n",
+    "        if nombre == producto:\n",
+    "           if cantidad in self.inventario > cantidad_pedido: #se puede vender, actualizar stock\n",
+    "              cantidad in self.inventario = cantidad - cantidad_pedido \n",
+    "\n",
+    "           elif cantidad in self.inventario < 0: #agregar pedido nuevo tienda\n",
+    "                \n",
+    "                cantidad += nuevo_pedido\n",
+    "\n",
+    "            else:\n",
+    "                print(f\"Del producto {nombre} queda un stock de {cantidad}.\")\n",
+    "        else:\n",
+    "            print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "\n",
+    "#da error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f696da8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def actualizar_stock(self, nombre, cantidad):\n",
+    "    for producto in self.inventario:\n",
+    "        if nombre == producto:\n",
+    "            precio, cantidad_actual = self.inventario[nombre]\n",
+    "            nueva_cantidad = cantidad_actual + cantidad\n",
+    "            if cantidad_actual < cantidad: #si se produce una venta\n",
+    "                precio, cantidad_actual = self.inventario[nombre]\n",
+    "                cantidad_actual -= cantidad\n",
+    "\n",
+    "            elif cantidad_actual > cantidad: #si se agrega al inventario\n",
+    "                precio, cantidad_actual = self.inventario[nombre]\n",
+    "                cantidad_actual -= cantidad\n",
+    "            else:\n",
+    "                print(f\"Del producto {nombre} queda un stock de {cantidad}.\")\n",
+    "        else:\n",
+    "            print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "#da error"
    ]
   },
   {
@@ -129,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 199,
    "id": "015e9362",
    "metadata": {},
    "outputs": [
@@ -154,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 200,
    "id": "2557e87c",
    "metadata": {},
    "outputs": [
@@ -166,7 +395,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 201,
    "id": "9dd3cb89",
    "metadata": {},
    "outputs": [
@@ -195,7 +424,7 @@
        "'patatas'"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 202,
    "id": "7423f047",
    "metadata": {},
    "outputs": [
@@ -225,6 +454,62 @@
     "tienda1.buscar_producto('fresas')\n",
     "tienda1.buscar_producto('patatas')\n",
     "tienda1.buscar_producto('manzanas')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "20fa924f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se han agregado 6 del producto fresas.\n",
+      "Este producto fresas no se encuentra en el inventario actualmente.\n",
+      "Este producto fresas no se encuentra en el inventario actualmente.\n",
+      "Este producto patatas no se encuentra en el inventario actualmente.\n",
+      "Este producto patatas no se encuentra en el inventario actualmente.\n",
+      "Se han agregado 6 del producto patatas.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.actualizar_stock('fresas', 6)\n",
+    "tienda1.actualizar_stock('patatas', 6)\n",
+    "tienda1.actualizar_stock('manzanas', 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "070a49f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se han agregado 6 del producto fresas.\n",
+      "Este producto fresas no se encuentra en el inventario actualmente.\n",
+      "Este producto fresas no se encuentra en el inventario actualmente.\n",
+      "Este producto patatas no se encuentra en el inventario actualmente.\n",
+      "Este producto patatas no se encuentra en el inventario actualmente.\n",
+      "Se han agregado 6 del producto patatas.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.actualizar_stock('fresas', 6)\n",
+    "tienda1.actualizar_stock('patatas', 6)\n",
+    "tienda1.actualizar_stock('manzanas', 6)"
    ]
   }
  ],
