--- a/evalucion_mod1_BGR.ipynb
+++ b/evalucion_mod1_BGR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "7225e49d",
    "metadata": {},
    "outputs": [],
@@ -60,12 +60,18 @@
     "            \n",
     "            else: #no ha habido ventas ni ha llegado stock\n",
     "                print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "    def eliminar_producto(self, nombre):\n",
+    "        if nombre in self.inventario:\n",
+    "            del self.inventario[nombre]\n",
+    "            print(f\"El producto {nombre} ha sido eliminado con éxito.\")\n",
+    "        else:\n",
+    "            print(f\"El producto {nombre} no se encuentra en el inventario.\")\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "839442b9",
    "metadata": {},
    "outputs": [
@@ -90,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "9545b3ea",
    "metadata": {},
    "outputs": [
@@ -102,7 +108,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "3f15109d",
    "metadata": {},
    "outputs": [
@@ -135,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "20240120",
    "metadata": {},
    "outputs": [
@@ -159,6 +165,36 @@
     "tienda1.actualizar_stock('fresas', 6)\n",
     "tienda1.actualizar_stock('patatas', 6)\n",
     "tienda1.actualizar_stock('manzanas', 6) #no sé por qué no se para el bucle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c4f84b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto patatas no se encuentra en el inventario.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'fresas': {'Nombre': 'fresas', 'Precio €': 3, 'Cantidad': 50},\n",
+       " 'arándanos': {'Nombre': 'arándanos', 'Precio €': 5, 'Cantidad': 40}}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tienda1.eliminar_producto('patatas')\n",
+    "tienda1.ver_inventario() #se actualiza correctamente sin patatas"
    ]
   }
  ],
