--- a/prueba_evalucion.ipynb
+++ b/prueba_evalucion.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "id": "b8246d6c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'break' outside loop (613607067.py, line 54)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[216], line 54\u001b[1;36m\u001b[0m\n\u001b[1;33m    break\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'break' outside loop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TiendaOnline:\n",
     "    def __init__(self, nombre):\n",
@@ -67,9 +58,15 @@
     "                else: #no ha habido ventas ni ha llegado stock\n",
     "                    print(f\"El producto {nombre} no ha se ha modificado.\")\n",
     "            \n",
-    "        else:  #no ha habido ventas ni ha llegado stock\n",
-    "            print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
-    "            break\n",
+    "            else:  #no ha habido ventas ni ha llegado stock\n",
+    "                print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "                break\n",
+    "    def eliminar_producto(self, nombre):\n",
+    "        if nombre in self.inventario:\n",
+    "            del self.inventario[nombre]\n",
+    "            print(f\"El producto {nombre} ha sido eliminado con éxito.\")\n",
+    "        else:\n",
+    "            print(f\"El producto {nombre} no se encuentra en el inventario.\")\n",
     "\n",
     "            \n",
     "\n",
@@ -78,19 +75,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 224,
+   "id": "13f36c43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " \n",
+    "def eliminar_producto(self, nombre):\n",
+    "    if nombre in self.inventario:\n",
+    "        del self.inventario[nombre]\n",
+    "        print(f\"El producto {nombre} ha sido eliminado con éxito.\")\n",
+    "    else:\n",
+    "        print(f\"El producto {nombre} no se encuentra en el inventario.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
    "id": "19d5f73e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'TiendaOnline' object has no attribute 'actualizar_stock'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[196], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tienda1\u001b[38;5;241m.\u001b[39mactualizar_stock(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfresas\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m6\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'TiendaOnline' object has no attribute 'actualizar_stock'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se han agregado 6 del producto fresas.\n",
+      "Este producto fresas no se encuentra en el inventario actualmente.\n",
+      "Este producto fresas no se encuentra en el inventario actualmente.\n"
      ]
     }
    ],
@@ -100,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 226,
    "id": "70265c3e",
    "metadata": {},
    "outputs": [
@@ -109,7 +120,7 @@
      "evalue": "incomplete input (1997494677.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[197], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[226], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
      ]
     }
    ],
@@ -173,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "id": "a1868681",
    "metadata": {},
    "outputs": [],
@@ -358,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 227,
    "id": "015e9362",
    "metadata": {},
    "outputs": [
@@ -383,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 228,
    "id": "2557e87c",
    "metadata": {},
    "outputs": [
@@ -395,7 +406,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 229,
    "id": "9dd3cb89",
    "metadata": {},
    "outputs": [
@@ -424,7 +435,7 @@
        "'patatas'"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 230,
    "id": "7423f047",
    "metadata": {},
    "outputs": [
@@ -458,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 231,
    "id": "20fa924f",
    "metadata": {},
    "outputs": [
@@ -468,12 +479,7 @@
      "text": [
       "Se han agregado 6 del producto fresas.\n",
       "Este producto fresas no se encuentra en el inventario actualmente.\n",
-      "Este producto fresas no se encuentra en el inventario actualmente.\n",
       "Este producto patatas no se encuentra en el inventario actualmente.\n",
-      "Este producto patatas no se encuentra en el inventario actualmente.\n",
-      "Se han agregado 6 del producto patatas.\n",
-      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
-      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
       "Este producto manzanas no se encuentra en el inventario actualmente.\n"
      ]
     }
@@ -486,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 232,
    "id": "070a49f2",
    "metadata": {},
    "outputs": [
@@ -494,22 +500,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se han agregado 6 del producto fresas.\n",
-      "Este producto fresas no se encuentra en el inventario actualmente.\n",
-      "Este producto fresas no se encuentra en el inventario actualmente.\n",
-      "Este producto patatas no se encuentra en el inventario actualmente.\n",
-      "Este producto patatas no se encuentra en el inventario actualmente.\n",
-      "Se han agregado 6 del producto patatas.\n",
-      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
-      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
-      "Este producto manzanas no se encuentra en el inventario actualmente.\n"
+      "El producto patatas ha sido eliminado con éxito.\n"
      ]
     }
    ],
    "source": [
-    "tienda1.actualizar_stock('fresas', 6)\n",
-    "tienda1.actualizar_stock('patatas', 6)\n",
-    "tienda1.actualizar_stock('manzanas', 6)"
+    "tienda1.eliminar_producto('patatas')\n"
    ]
   }
  ],
