--- a/evalucion_mod1_BGR.ipynb
+++ b/evalucion_mod1_BGR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "id": "7225e49d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
     "        if nombre in self.inventario:\n",
     "            self.inventario[nombre][0] = precio\n",
     "            self.inventario[nombre][1] = cantidad #intento actualizar precio y cantidad, update me da error\n",
-    "            print(f\" El producto ya existe, en el inventario aparece la cantidad {cantidad} al precio {precio}.\") #actualizar producto con update\n",
+    "            print(f\"El producto ya existe, en el inventario aparece la cantidad {cantidad} al precio {precio}.\") #actualizar producto con update\n",
     "\n",
     "        else:\n",
     "            self.inventario[nombre] = [precio, cantidad] #agregar producto, asignación directa\n",
@@ -58,20 +58,29 @@
     "                else: #no ha habido ventas ni ha llegado stock\n",
     "                    print(f\"El producto {nombre} no ha se ha modificado.\")\n",
     "            \n",
-    "            else: #no ha habido ventas ni ha llegado stock\n",
-    "                print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "        if nombre not in self.inventario: #este producto no está en el inventario\n",
+    "            print(f\"Este producto {nombre} no se encuentra en el inventario actualmente.\")\n",
+    "\n",
     "    def eliminar_producto(self, nombre):\n",
     "        if nombre in self.inventario:\n",
     "            del self.inventario[nombre]\n",
     "            print(f\"El producto {nombre} ha sido eliminado con éxito.\")\n",
     "        else:\n",
     "            print(f\"El producto {nombre} no se encuentra en el inventario.\")\n",
+    "\n",
+    "    def calcular_valor_inventario(self):\n",
+    "        total_valor = 0 #hay que empezar de 0 para que vaya sumando\n",
+    "        for nombre, (precio, cantidad) in self.inventario.items(): #me itera por los tres, pero como es un diccionario hay que poner (), si no interpreta que es una tupla y items()\n",
+    "            valor_producto = cantidad * precio\n",
+    "            total_valor += valor_producto   #para que sume el valor en cada iteración por los productos\n",
+    "            print(f\"Para el producto {nombre} el valor total es {valor_producto}\")\n",
+    "        print(f\"El valor total de mi inventario es en € {total_valor}\") \n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "id": "839442b9",
    "metadata": {},
    "outputs": [
@@ -81,7 +90,7 @@
      "text": [
       "El producto fresas se ha agregado con éxito.\n",
       "El producto arándanos se ha agregado con éxito.\n",
-      " El producto ya existe, en el inventario aparece la cantidad 50 al precio 3.\n",
+      "El producto ya existe, en el inventario aparece la cantidad 50 al precio 3.\n",
       "El producto patatas se ha agregado con éxito.\n"
      ]
     }
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "id": "9545b3ea",
    "metadata": {},
    "outputs": [
@@ -108,7 +117,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "id": "3f15109d",
    "metadata": {},
    "outputs": [
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 91,
    "id": "20240120",
    "metadata": {},
    "outputs": [
@@ -150,13 +159,7 @@
      "output_type": "stream",
      "text": [
       "Se han agregado 6 del producto fresas.\n",
-      "Este producto fresas no se encuentra en el inventario actualmente.\n",
-      "Este producto fresas no se encuentra en el inventario actualmente.\n",
-      "Este producto patatas no se encuentra en el inventario actualmente.\n",
-      "Este producto patatas no se encuentra en el inventario actualmente.\n",
       "Se han agregado 6 del producto patatas.\n",
-      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
-      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
       "Este producto manzanas no se encuentra en el inventario actualmente.\n"
      ]
     }
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "58c4f84b",
    "metadata": {},
    "outputs": [
@@ -177,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El producto patatas no se encuentra en el inventario.\n"
+      "El producto patatas ha sido eliminado con éxito.\n"
      ]
     },
     {
@@ -187,7 +190,7 @@
        " 'arándanos': {'Nombre': 'arándanos', 'Precio €': 5, 'Cantidad': 40}}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,6 +198,26 @@
    "source": [
     "tienda1.eliminar_producto('patatas')\n",
     "tienda1.ver_inventario() #se actualiza correctamente sin patatas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "3211f6d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para el producto fresas el valor total es 150\n",
+      "Para el producto arándanos el valor total es 200\n",
+      "El valor total de mi inventario es en € 350\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.calcular_valor_inventario()"
    ]
   }
  ],
