--- a/prueba_evalucion.ipynb
+++ b/prueba_evalucion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 294,
    "id": "b8246d6c",
    "metadata": {},
    "outputs": [],
@@ -68,14 +68,93 @@
     "        else:\n",
     "            print(f\"El producto {nombre} no se encuentra en el inventario.\")\n",
     "\n",
-    "            \n",
+    "    def calcular_valor_inventario(self):\n",
+    "        total_valor = 0 #hay que empezar de 0 para que vaya sumando\n",
+    "        for nombre, (precio, cantidad) in self.inventario.items(): #me itera por los tres, pero como es un diccionario hay que poner (), si no interpreta que es una tupla y items()\n",
+    "            valor_producto = cantidad * precio\n",
+    "            total_valor += valor_producto   #para que sume el valor en cada iteración por los productos\n",
+    "            print(f\"Para el producto {nombre} el valor total es {valor_producto}\")\n",
+    "        print(f\"El valor total de mi inventario es en € {total_valor}\")      \n",
     "\n",
     "             \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 295,
+   "id": "13e46a90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcular_valor_inventario(self):\n",
+    "    for nombre in self.inventario:\n",
+    "        total_valor = precio * cantidad\n",
+    "# falta definir precio y cantidad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "id": "cb1a7a18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcular_valor_inventario(self):\n",
+    "    total_valor = 0 #hay que empezar de 0 para que vaya sumando\n",
+    "    for nombre, precio, cantidad in self.inventario: #me itera por los tres\n",
+    "        valor_producto = cantidad * precio\n",
+    "        total_valor += valor_producto   #para que sume el valor en cada iteración por los productos\n",
+    "        print(f\"Para el producto {nombre} el valor total es {valor_producto}\")\n",
+    "    print(f\"El valor total de mi inventario es en € {total_valor}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "id": "d8ab6695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventario = {'Nombre': 'fresas', 'Precio €': 3, 'Cantidad': 50}\n",
+    "\n",
+    "def calcular_valor_inventario(self):\n",
+    "    for nombre, precio, cantidad in self.inventario: #me itera por los tres\n",
+    "        valor_producto = cantidad * precio\n",
+    "        total_valor = sum(valor_producto)\n",
+    "        print(f\"Para el producto {nombre} el valor total es {total_valor}\")\n",
+    "\n",
+    "#error\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "id": "604194de",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'precio' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[298], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m producto \u001b[38;5;241m=\u001b[39m (nombre, precio, cantidad)\n\u001b[0;32m      2\u001b[0m prod1 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfresas\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m50\u001b[39m)\n\u001b[0;32m      3\u001b[0m prod2 \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124marándanos\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m40\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'precio' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "producto = (nombre, precio, cantidad)\n",
+    "prod1 = ('fresas', 3, 50)\n",
+    "prod2 = ('arándanos', 5, 40)\n",
+    "for nombre in self.inventario:\n",
+    "        total_valor = precio * cantidad\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "13f36c43",
    "metadata": {},
    "outputs": [],
@@ -91,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "id": "19d5f73e",
    "metadata": {},
    "outputs": [
@@ -100,7 +179,6 @@
      "output_type": "stream",
      "text": [
       "Se han agregado 6 del producto fresas.\n",
-      "Este producto fresas no se encuentra en el inventario actualmente.\n",
       "Este producto fresas no se encuentra en el inventario actualmente.\n"
      ]
     }
@@ -111,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "id": "70265c3e",
    "metadata": {},
    "outputs": [
@@ -120,7 +198,7 @@
      "evalue": "incomplete input (1997494677.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[226], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[249], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
      ]
     }
    ],
@@ -143,7 +221,7 @@
      "evalue": "expected an indented block after 'if' statement on line 4 (1937694687.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[178], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    elif cantidad > 0: #ha llegado stock a la tienda\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 4\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[250], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    elif cantidad > 0: #ha llegado stock a la tienda\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 4\n"
      ]
     }
    ],
@@ -369,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 301,
    "id": "015e9362",
    "metadata": {},
    "outputs": [
@@ -394,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 302,
    "id": "2557e87c",
    "metadata": {},
    "outputs": [
@@ -406,7 +484,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 303,
    "id": "9dd3cb89",
    "metadata": {},
    "outputs": [
@@ -435,7 +513,7 @@
        "'patatas'"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 304,
    "id": "7423f047",
    "metadata": {},
    "outputs": [
@@ -469,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 305,
    "id": "20fa924f",
    "metadata": {},
    "outputs": [
@@ -492,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 306,
    "id": "070a49f2",
    "metadata": {},
    "outputs": [
@@ -506,6 +584,26 @@
    ],
    "source": [
     "tienda1.eliminar_producto('patatas')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "id": "c1b03947",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para el producto fresas el valor total es 150\n",
+      "Para el producto arándanos el valor total es 200\n",
+      "El valor total de mi inventario es en € 350\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda1.calcular_valor_inventario()"
    ]
   }
  ],
