--- a/evalucion_mod1_BGR.ipynb
+++ b/evalucion_mod1_BGR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "id": "7225e49d",
    "metadata": {},
    "outputs": [],
@@ -86,12 +86,23 @@
     "            self.clientes[nombre] = {\"Email\" : email,\n",
     "                    \"Compras realizadas\" : compras}\n",
     "            print(f\"El cliente {nombre} ha sido agregado con el email: {email}.\")\n",
+    "        \n",
+    "    def ver_clientes(self):\n",
+    "        clientes = {}\n",
+    "        for nombre, info in self.clientes.items(): #items() devuelve lista de tuplas con clave y su valor\n",
+    "            email = info['Email'] #como es un dic nos puede dar error, por eso se usa info, para poder extraer los datos \n",
+    "            compras = info['Compras realizadas']\n",
+    "            clientes[nombre] = {\n",
+    "                        \"Email\": email,\n",
+    "                        \"Compras realizadas\": compras,\n",
+    "                    }\n",
+    "        return clientes\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "id": "839442b9",
    "metadata": {},
    "outputs": [
@@ -116,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 88,
    "id": "9545b3ea",
    "metadata": {},
    "outputs": [
@@ -128,7 +139,7 @@
        " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "id": "3f15109d",
    "metadata": {},
    "outputs": [
@@ -161,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "id": "20240120",
    "metadata": {},
    "outputs": [
@@ -183,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 91,
    "id": "58c4f84b",
    "metadata": {},
    "outputs": [
@@ -201,7 +212,7 @@
        " 'arándanos': {'Nombre': 'arándanos', 'Precio €': 5, 'Cantidad': 40}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 92,
    "id": "3211f6d9",
    "metadata": {},
    "outputs": [
@@ -233,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 93,
    "id": "c3a48183",
    "metadata": {},
    "outputs": [
@@ -258,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 94,
    "id": "59410b11",
    "metadata": {},
    "outputs": [
@@ -271,7 +282,25 @@
     }
    ],
    "source": [
-    "print(tienda1.clientes)"
+    "print(tienda1.clientes) #para llamar no se ponen los () porque es un diccionario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "83746050",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Marc': {'Email': 'Marc@gmail.com', 'Compras realizadas': 0}, 'Mercedes': {'Email': 'merce@gmail.com', 'Compras realizadas': 0}, 'Melania': {'Email': 'mel@gmail.com', 'Compras realizadas': 0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tienda1.ver_clientes())"
    ]
   }
  ],
