--- a/prueba_bonus.ipynb
+++ b/prueba_bonus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 109,
    "id": "66adbf31",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "        self.nombre = nombre \n",
     "        self.inventario = {}   #inventario y ventas totales son atributos\n",
     "        self.ventas_totales = float(0) #aquí tiene que ir un float\n",
-    "        self.clientes = {}\n",
+    "        self.clientes = {} #agregado en la parte Bonus\n",
     "\n",
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
     "        if nombre in self.inventario:\n",
@@ -45,7 +45,7 @@
     "            print(\"El producto que busca no está disponible.\") #else fuera para que no repita la iteración por todos los productos si no lo encuentra\n",
     "\n",
     "    def actualizar_stock(self, nombre, cantidad_actual):\n",
-    "        for producto in self.inventario:\n",
+    "        for producto in self.inventario: \n",
     "            if nombre == producto:\n",
     "                precio, cantidad = self.inventario[nombre]\n",
     "                nueva_cantidad = cantidad + cantidad_actual #actualizar con ventas\n",
@@ -78,16 +78,31 @@
     "        print(f\"El valor total de mi inventario es en € {total_valor}\") \n",
     "\n",
     "    def agregar_clientes(self, nombre, email):\n",
+    "        compras = 0 #Nadie ha comprado todavía\n",
+    "        \n",
     "        if nombre in self.clientes.keys(): # se usa keys porque es un diccionario\n",
     "            print(f\"El cliente {nombre} está en la lista.\")\n",
     "        else:\n",
-    "            self.clientes[nombre] = [nombre, email]\n",
-    "            print(f\"El cliente {nombre} ha sido agregado con el email: {email}.\")"
+    "            self.clientes[nombre] = {\"Email\" : email,\n",
+    "                    \"Compras realizadas\" : compras}\n",
+    "            print(f\"El cliente {nombre} ha sido agregado con el email: {email}.\")\n",
+    "\n",
+    "    def ver_clientes(self):\n",
+    "        clientes = {}\n",
+    "        for nombre, info in self.clientes.items(): #items() devuelve lista de tuplas con clave y su valor\n",
+    "            email = info['Email'] #como es un dic nos puede dar error, por eso se usa info, para poder extraer los datos \n",
+    "            compras = info['Compras realizadas']\n",
+    "            clientes[nombre] = {\n",
+    "                        \"Email\": email,\n",
+    "                        \"Compras realizadas\": compras,\n",
+    "                    }\n",
+    "        return clientes\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 110,
    "id": "aa4bded2",
    "metadata": {},
    "outputs": [
@@ -132,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 111,
    "id": "6af2074c",
    "metadata": {},
    "outputs": [
@@ -158,39 +173,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 112,
    "id": "3a7ebd9f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'TiendaOnline' object has no attribute 'self'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tienda1\u001b[38;5;241m.\u001b[39mself\u001b[38;5;241m.\u001b[39mclientes()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'TiendaOnline' object has no attribute 'self'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Marc': {'Email': 'Marc@gmail.com', 'Compras realizadas': 0}, 'Mercedes': {'Email': 'merce@gmail.com', 'Compras realizadas': 0}, 'Melania': {'Email': 'mel@gmail.com', 'Compras realizadas': 0}}\n"
      ]
     }
    ],
    "source": [
-    "tienda1.self.clientes()"
+    "print(tienda1.clientes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "0f0b8abd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Marc': {'Email': 'Marc@gmail.com', 'Compras realizadas': 0}, 'Mercedes': {'Email': 'merce@gmail.com', 'Compras realizadas': 0}, 'Melania': {'Email': 'mel@gmail.com', 'Compras realizadas': 0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tienda1.ver_clientes())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4304174b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "id": "5c5c629d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def agregar_clientes(self, nombre, email):\n",
+    "    compras = 0\n",
+    "    self.clientes = { \"Nombre\" : nombre,\n",
+    "                 \"Email\" : email,\n",
+    "                 \"Compras realizadas\" : compras}\n",
     "    if nombre in self.clientes.keys(): # se usa keys porque es un diccionario\n",
     "        print(f\"El cliente {nombre} está en la lista.\")\n",
     "    else:\n",
-    "        self.clientes[nombre] = [nombre, email]\n",
+    "        self.clientes[nombre] = [email, compras]\n",
     "        print(f\"El cliente {nombre} ha sido agregado con el email: {email}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "a36e3f10",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nombre' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[115], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclientes \u001b[38;5;241m=\u001b[39m { \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNombre\u001b[39m\u001b[38;5;124m\"\u001b[39m : nombre,\n\u001b[0;32m      2\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEmail\u001b[39m\u001b[38;5;124m\"\u001b[39m : email,\n\u001b[0;32m      3\u001b[0m                  \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompras realizadas\u001b[39m\u001b[38;5;124m\"\u001b[39m : compras\n\u001b[0;32m      4\u001b[0m }\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nombre' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "self.clientes = { \"Nombre\" : nombre,\n",
+    "                 \"Email\" : email,\n",
+    "                 \"Compras realizadas\" : compras\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da9d80ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ver_clientes(self):\n",
+    "    clientes = {}\n",
+    "    for cliente in self.clientes.items(): #items() devuelve lista de tuplas con clave y su valor\n",
+    "        self.cliente[nombre] = email, compras\n",
+    "        return clientes\n",
+    "        "
    ]
   }
  ],
